Optimize code, remove some unnecessary initialization, fix some deprecated methods
Signed-off-by: Carlos Garcia <bcode@protonmail.com>